--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,71 @@
-asrecognition
-moviepy
+aiohttp==3.8.1
+aiosignal==1.2.0
+appdirs==1.4.4
+asrecognition==0.0.4
+async-timeout==4.0.1
+attrs==21.2.0
+audioread==2.1.9
+Brotli==1.0.9
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.8
+click==8.0.3
+dash==2.0.0
+dash-bootstrap-components==1.0.1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+datasets==1.16.1
+decorator==4.4.2
+dill==0.3.4
+filelock==3.4.0
+Flask==2.0.2
+Flask-Compress==1.10.1
+frozenlist==1.2.0
+fsspec==2021.11.1
+huggingface-hub==0.2.0
+idna==3.3
+imageio==2.13.1
+imageio-ffmpeg==0.4.5
+itsdangerous==2.0.1
+Jinja2==3.0.3
+joblib==1.1.0
+librosa==0.8.1
+llvmlite==0.36.0
+MarkupSafe==2.0.1
+moviepy==1.0.3
+multidict==5.2.0
+multiprocess==0.70.12.2
+numba==0.53.1
+numpy==1.21.4
+packaging==21.3
+pandas==1.3.4
+Pillow==8.4.0
+plotly==5.4.0
+pooch==1.5.2
+proglog==0.1.9
+pyarrow==6.0.1
+pycparser==2.21
+pyparsing==3.0.6
+python-dateutil==2.8.2
+pytz==2021.3
+PyYAML==6.0
+regex==2021.11.10
+requests==2.26.0
+resampy==0.2.2
+sacremoses==0.0.46
+scikit-learn==1.0.1
+scipy==1.7.3
+six==1.16.0
+SoundFile==0.10.3.post1
+tenacity==8.0.1
+threadpoolctl==3.0.0
+tokenizers==0.10.3
+torch==1.10.0
+tqdm==4.62.3
+transformers==4.12.5
+typing-extensions==4.0.1
+urllib3==1.26.7
+Werkzeug==2.0.2
+xxhash==2.0.2
+yarl==1.7.2
